# re_dubbing

./: README.md  main.py  pyproject.toml  requirements.txt  setup.sh
src/: cloning_utils.py  constants.py  diarization.py  elevenlabs_client.py  process_subtitiles.py  utils.py
