[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "re_dubbing"
version = "0.1.0"
description = "A video redubbing project"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Darima Mylzenova", email = "darimamylzenova@gmail.com"}
]

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.system-packages]
install = [
    "ffmpeg"
]
